prefer simple requiredargs constructor over lombok annotation